# az-cli-utils

./: README.md  pyproject.toml
src/az_cli_utils/: add_public_ip_to_storage_whitelist.py  create_or_update_azure_keyvault_secret_from_file.py  create_or_update_azure_keyvault_secrets.py  delete_azure_keyvault_secrets.py
